# cv-parse

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  sonar-project.properties
.codacy/: codacy.yaml
.cursor/rules/: specify-rules.mdc
.github/workflows/: sonar.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
specs/001-doc-to-text-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-soft-delete-extractions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dev-env-tooling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-testing-strategy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-cv-api-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-extractions-crud-audit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-structured-cv-parsing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-extract-personal-info/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-advanced-cv-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
src/api/: dependencies.py  routes.py
src/application/: __init__.py  cv_parsing.py
src/domain/: certifications_parser.py  constants.py  cv_parser.py  document_extractor_contracts.py  education_parser.py  experience_parser.py  extractor.py  section_detector.py  skills_extractor.py
src/infra/: config.py  constants.py  logging_config.py  schemas.py  storage.py
src/services/: __init__.py  upload_validator.py
tests/: conftest.py  test_api.py  test_domain.py
tests/api/: __init__.py  test_main_app.py  test_routes.py  (+1 more)
(+67 files in other folders)
