[project]
name = "cv-doc-to-text-api"
version = "0.1.0"
description = "Doc-to-text API with improved development environment and tooling"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pdfplumber",
    "pydantic-settings",
    "python-multipart",
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

