[project]
name = "cv-doc-to-text-api"
version = "0.1.0"
description = "Doc-to-text API with improved development environment and tooling"
requires-python = ">=3.12"

dependencies = [
    "debugpy",
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pdfplumber",
    "pydantic-settings",
    "python-multipart",
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
]

[tool.uv]
package = false

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]

