[project]
name = "cv-doc-to-text-api"
version = "0.1.0"
description = "Doc-to-text API with improved development environment and tooling"
requires-python = ">=3.12"

dependencies = [
    "debugpy",
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pdfplumber",
    "pydantic-settings",
    "python-multipart",
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
]

[tool.uv]
package = false

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "C", "W", "B", "PERF", "RET", "S", "FAST", "SIM"]
ignore = ["D"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "pyright>=1.1.408",
]

